...
    );

    // Remove the event listener when the component is unmounted or no longer focused
    return () => backHandler.remove();
  }, []);
  return (
    <View style={{ flex: 1 }} testID='home-screen'>
      <View style={styles.homeTextContainer}>
        <View style={styles.headerContainer}>
          <View style={{ flex: 1 }}>{/* Empty View as Spacer */}</View>
          <View style={{ flex: 2, alignItems: "center" }}>
            <Text style={styles.homeText}>Today</Text>
          </View>
...
