...
          <View style={{ width: 125, alignItems: 'flex-start' }}>
            <Text style={styles.label}>Weight (lbs):</Text>
          </View>
          <Text style={styles.labelText}>{weight}</Text>
        </View>

        <TouchableOpacity style={styles.editButton} onPress={openModal} testID="edit-button">
          <Text style={styles.buttonText}>Edit</Text>
        </TouchableOpacity>

        <Modal visible={isModalVisible} animationType="slide" transparent={true}>
          <View style={styles.modalContainer}>
            <Text style={styles.modalTitle}>Edit Profile Information</Text>
            <View style={{ flexDirection: 'row', justifyContent: 'space-between', width: '80%' }}>
              <TextInput
                style={{ ...styles.modalInput, flex: 1, marginRight: 10 }}
                placeholder={firstName ? firstName : 'John'}
                placeholderTextColor={'#999897'}
                onChangeText={(text) => setEditedFirstName(text)}
...
              placeholder={weight ? `${weight}` : 'Weight (lbs)'}
              placeholderTextColor={'#999897'}
              onChangeText={(text) => setEditedWeight(text)}
              keyboardType={"number-pad"}
            />
            <View style={styles.modalButtonContainer}>
            <TouchableOpacity style={styles.modalSaveButton} onPress={handleSaveChanges} testID='save-button'>
              <Text style={styles.modalText}>Save</Text>
            </TouchableOpacity>
            <TouchableOpacity style={styles.modalCancelButton} onPress={closeModal} testID='cancel-button' >
              <Text style={styles.modalText}>Cancel</Text>
            </TouchableOpacity>
            </View>
...
